--- a/style/style.css
+++ b/style/style.css
@@ -1,56 +1,109 @@
-/* Screens */
+/* Generic Tags */
+p {
+    text-align: center;
+}
 
+/* Screens */
 .splash-screen {
     text-align: center;
-
+    position: relative;
 }
 
-.game-description {
-    position: absolute;
+#game-description {
     text-align: center;
     width: 60%;
+    margin: 5px;
 }
 
+#character-select {
+    width: 70%;
+    margin: 5px;
+}
+
+#difficulty {
+    text-align: center;
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* - - - Borrowed from: https://www.w3schools.com/howto/howto_js_rangeslider.asp - - - */
+.difficulty-slider {
+    -webkit-appearance: none; /* Override default CSS styles */
+    appearance: none;
+    width: 100%;             /* Full-width */
+    height: 25px;            /* Specified height */
+    background: #d3d3d3;     /* Grey background */
+    outline: none;           /* Remove outline */
+    opacity: 0.7;            /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.difficulty-slider:hover {
+    opacity: 1;              /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use webkit (Chrome, Opera, Safari, Edge) and moz (Firefox) to override default look) */
+.difficulty-slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 20px;             /* Set a specific slider handle width */
+    height: 25px;            /* Slider handle height */
+    background: #00274C;     /* Blue background */
+    cursor: pointer;         /* Cursor on hover */
+}
+
+.difficulty-slider::-moz-range-thumb {
+    width: 20px;             /* Set a specific slider handle width */
+    height: 25px;            /* Slider handle height */
+    background: #00274C;     /* Blue background */
+    cursor: pointer;         /* Cursor on hover */
+}
+/* - - - End borrowed stuff - - - */
+
 .game-screen {
-    position: relative;
+    position: absolute;
     vertical-align: middle;
     width: 100%
     height: 100%;
 
     display: none;          /* default - unhide when they click start */
     text-align: center;
-
 }
 
 .score-stats {
-    position: relative;
-    vertical-align: middle;
-    width: 50%;
+    position: absolute;
+    top: 10px;
+    margin-left: 50%;
+    margin-right: 50%;
+    width: 500px;
     border: solid black 2px;
-
 }
 
 .game-over-screen {
     display: none;          /* default - unhide when game ends */
     text-align: center;
-
 }
 
-
-
-
 /* Gameplay Objects */
+#player {
+    position: absolute;
+
+    height: 100px;
+    width:  100px;
+}
+
 .bad-obj {
     position: absolute;         
     height: 50px;           /* FIXME: just placeholder values for now */
     width: 50px;            /* FIXME: just placeholder values for now */
-
 }
 
 .powerup {
     position: absolute;
     height: 50px;           /* FIXME: just placeholder values for now */
     width: 50px;            /* FIXME: just placeholder values for now */
-
 }
 
