can spawn images and added animation

--- a/style/style.css
+++ b/style/style.css
@@ -22,8 +22,12 @@ footer {
 
 /* Classes */
 .main {
-    height: 100%;
+    height: 500px;
     width: 100%;
     text-align: center;
 
+}
+
+.images {
+    position: absolute;
 }
