--- a/style/style.css
+++ b/style/style.css
@@ -84,7 +84,6 @@ footer {
 /* MAIN SCREEN ITEMS */
 #main {
     height: 500px;
-    /*line-height: 500px; fixed the top down but purpose was for keeping text in the middle*/
     width: 100%;
     font-size: 24px;
     text-align: center;
@@ -94,6 +93,12 @@ footer {
 
 .images {
     position: absolute;
+}
+
+#piano_img {
+    vertical-align: middle;
+    z-index: 2;
+    visibility: hidden;     /* default */
 }
 
 #prev_keys {
