--- a/style/style.css
+++ b/style/style.css
@@ -56,6 +56,7 @@ footer {
 #random {
     border: 5px solid yellow;   /* Random is default mode*/
     background: blue;
+    color: white;
 }
 
 #drum_kit {
@@ -78,6 +79,7 @@ footer {
 #tutorial {
     border: 2px solid black;
     background: purple;
+    color: white;
 }
 
 
@@ -88,7 +90,7 @@ footer {
     font-size: 24px;
     text-align: center;
     vertical-align: middle;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
 
 .images {
